--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,8 +4,11 @@
 
 @charset "utf-8";
 
-.page__hero--overlay .page__lead { max-width: 640px; }
-@media (min-width: 37.5em) { .page__hero--overlay .page__title { font-size: 2em; max-width: 640px; } }
-
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+.page__hero--overlay .page__lead { max-width: 600px;}
+@media (min-width: 37.5em) { .page__hero--overlay .page__title { font-size: 2em; max-width: 600px; } }
+
+.archive__item-teaser img { max-height: 64px; max-width: 120px; width: auto; }
+.archive__item-teaser { text-align: center; }
