Add NWO project ID to footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
 
     <a href='https://www.nwo.nl/'><img src='{{ site.url }}/assets/images/NWO-logo-RGB.jpg' class='nwo'></a>
     <div class='footer-disclaimer'>
-      This project is supported in part by <a href='https://www.nwo.nl/'>NWO</a> (project #...)
+      This project is supported in part by <a href='https://www.nwo.nl/'>NWO</a> (project VI.Vidi.192.100).
 
       <br /><br />
 
