Added emailaddress on homepage, challenge page and in footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,6 +22,10 @@
     <div class='footer-disclaimer'>
       This project is supported in part by <a href='https://www.nwo.nl/'>NWO</a> (project VI.Vidi.192.100).
 
+      <br />
+
+      Email: vipriors-ewi AT tudelft DOT nl
+
       <br /><br />
 
       &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}.
