July 29th update: notifications, revised program, more details.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -80,5 +80,9 @@ iframe.leaderboard {
     margin-left: -20px;
 }
 
+table {
+    width: auto !important;
+}
+
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
