Major update: full program, added speaker, tech reports.
Moved CFP to separate page, so that the frontpage is entirely about the live session.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -64,6 +64,14 @@ p span.header-marking {
     padding: 2px 8px;
 }
 
+span.list-marking {
+    background: #00a8d6;
+    line-height: 1.45em;
+    padding: 3px 10px;
+    color: white;
+    font-weight: bold;
+}
+
 #twitter_embed {
     display: block;
     float: right;
