--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,7 @@
 <meta charset="utf-8">
 
+<meta name="description" content="A workshop series on saving data by adding visual knowledge priors to Deep Learning." />
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159180103-1"></script>
 <script>
