--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,18 +21,16 @@ div.feature__wrapper:nth-child(2) .archive__item-body { text-align: left !import
     text-align: center !important;
 }
 .page__content table th:nth-child(1), .page__content table td:nth-child(1),
-.page__content table th:nth-child(2), .page__content table td:nth-child(2),
-.page__content table th:nth-child(3), .page__content table td:nth-child(3),
-.page__content table th:nth-child(4), .page__content table td:nth-child(4) {
+.page__content table th:nth-child(2), .page__content table td:nth-child(2) {
     width: 70px !important;
     text-align: center !important;
 }
-.page__content table th:nth-child(5), .page__content table td:nth-child(5) {
+.page__content table th:nth-child(3), .page__content table td:nth-child(3) {
     width: 30%;
 }
-// .page__content table th:nth-child(6), .page__content table td:nth-child(6) {
-//     width: 40%;
-// }
+.page__content table th:nth-child(4), .page__content table td:nth-child(4) {
+    width: 40%;
+}
 
 @media (min-width: 80em) {
     body.semiwide .page {
@@ -135,7 +133,8 @@ h2#organizers + .feature__wrapper .feature__item {
 
         &:nth-child(n) {
             float: left;
-            width: 12%;
+            // width: 12%;
+            width: 24.7%;
             clear: none;
         }
 
@@ -159,7 +158,7 @@ h2#invited-speakers + .feature__wrapper .feature__item {
 
         &:nth-child(n) {
             float: left;
-            width: 24.7%;
+            // width: 24.7%;
             clear: none;
         }
 
